# HumorR1

./: .gitignore  README.md  pyproject.toml
docs/: tasks.md
notebooks/: HumorR1_Baselines_&_Eval.ipynb
scripts/: best_of_n_analysis.py  build_spotcheck_html.py  compile_results.py  curate_ood_dataset.py  judge_pairwise.py  llm_eval.py  reward_stub.py  run_baselines.py  run_ood_eval.py  score_spotcheck.py  setup.sh  train_grpo.py  train_grpo.slurm  train_grpo_qwen3vl.py  train_reward_model.py
